--- a/AppHost/AppHost.csproj
+++ b/AppHost/AppHost.csproj
@@ -14,9 +14,11 @@
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" Version="9.3.0" />
     <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="9.3.0" />
+    <PackageReference Include="Aspire.Hosting.Redis" Version="9.3.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Basket\Basket.csproj" />
     <ProjectReference Include="..\Catalog\Catalog.csproj" />
   </ItemGroup>
 
