client cache config & basket uses cases

--- a/Basket/Basket.csproj
+++ b/Basket/Basket.csproj
@@ -11,8 +11,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Application\" />
     <Folder Include="Infrastructure\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="9.3.0" />
   </ItemGroup>
 
 </Project>
