rabbitmq & masstransit configurations & integration event for product price change

--- a/Basket/Basket.csproj
+++ b/Basket/Basket.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ServiceDefaults\ServiceDefaults.csproj" />
+    <ProjectReference Include="..\Shared.Bus\Shared.Bus.csproj" />
   </ItemGroup>
 
   <ItemGroup>
