--- a/Catalog/Catalog.csproj
+++ b/Catalog/Catalog.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ServiceDefaults\ServiceDefaults.csproj" />
+    <ProjectReference Include="..\Shared.Bus\Shared.Bus.csproj" />
   </ItemGroup>
 
   <ItemGroup>
