add vector-embedding dependencies Microsoft.Extensions.VectorData.Abstractions 9.6.0   • Common interfaces for persisting and querying vector embeddings.
 Microsoft.SemanticKernel.Connectors.InMemory 1.57.0-preview
  • Lightweight in-memory vector store connector for rapid semantic-search prototyping.

--- a/Catalog/Catalog.csproj
+++ b/Catalog/Catalog.csproj
@@ -18,6 +18,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.VectorData.Abstractions" Version="9.6.0" />
+    <PackageReference Include="Microsoft.SemanticKernel.Connectors.InMemory" Version="1.57.0-preview" />
   </ItemGroup>
 
 </Project>
