yarp - rate limit

--- a/ApiGateways/YarpApiGateway/appsettings.json
+++ b/ApiGateways/YarpApiGateway/appsettings.json
@@ -10,6 +10,7 @@
     "Routes": {
       "catalog-route": {
         "ClusterId": "catalog",
+        "RateLimiterPolicy": "fixed",
         "Match": {
           "Path": "/catalog/{**catch-all}"
         },
